feat: invite candidates to interview, close offer, select candidate
