# server/src/entities/candidatura.entity.ts
@@ -15,6 +15,9 @@ export class CandidaturaEntity extends BaseEntity implements Candidatura {
   @Column('bit', { name: 'approvata', nullable: true })
   approvata: boolean | null;
 
+  @Column('bit', { name: 'colloquio', nullable: true, default: 0 })
+  colloquio: boolean | null;
+
   @Column({ type: 'int', name: 'punteggio', nullable: true })
   punteggio: number | null;
 
