# server/src/interfaces/candidatura.interface.ts
@@ -6,6 +6,7 @@ export interface Candidatura {
   data: Date | null;
   approvata: boolean | null;
   punteggio: number | null;
+  colloquio: boolean | null;
   utenteCf?: string | Utente;
   offerta?: number | OffertaLavoro;
 }
