# server/swagger.yaml
@@ -502,15 +502,50 @@ paths:
         500:
           description: 'Server Error'
 
-  /jobs/offers/accept/{applicationId}:
+  /jobs/offers/close/{offerId}:
     get:
       security:
         - cookieAuth: []
       tags:
         - jobs
-      summary: accept a candidate for a job offer
+      summary: close a job offer without selecting a candidate
       parameters:
         - name: offerId
+          in: path
+          description: offer id
+          required: true
+          type: integer
+      responses:
+        200:
+          description: Offer closed
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+              success:
+                type: boolean
+        401:
+          description: 'Wrong auth token'
+        404:
+          description: 'Missing auth token'
+        500:
+          description: 'Server Error'
+
+  /jobs/offers/close/{offerId}/{applicationId}:
+    get:
+      security:
+        - cookieAuth: []
+      tags:
+        - jobs
+      summary: close a job offer and accept a candidate
+      parameters:
+        - name: offerId
+          in: path
+          description: offer id
+          required: true
+          type: integer
+        - name: applicationId
           in: path
           description: offer id
           required: true
@@ -563,6 +598,36 @@ paths:
         500:
           description: 'Server Error'
 
+  /jobs/interview:
+    post:
+      security:
+        - cookieAuth: []
+      tags:
+        - jobs
+      summary: invite to interview the specified candidated
+      parameters:
+        - name: body
+          in: body
+          description: interview candidates data
+          required: true
+          schema:
+            $ref: '#/definitions/interviewDto'
+      responses:
+        200:
+          description: candidate invited
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+              candidaturas:
+                $ref: '#/definitions/candidaturas'
+        401:
+          description: 'Wrong auth token'
+        404:
+          description: 'Missing auth token'
+        500:
+          description: 'Server Error'
 definitions:
   loginDto:
     type: object
@@ -839,6 +904,57 @@ definitions:
         type: integer
       message:
         type: string
+
+  interviewDto:
+    type: object
+    required:
+      - invites
+      - selected
+    properties:
+      invites:
+        type: array
+        items:
+          type: object
+          required:
+            - candidaturaId
+            - time
+            - date
+            - place
+          properties:
+            candidaturaId:
+              type: integer
+            time:
+              type: string
+            date:
+              type: string
+            place:
+              type: string
+      selected:
+        type: array
+        items:
+          type: boolean
+
+  candidaturas:
+    type: array
+    items:
+      type: object
+      required:
+        - id
+        - data
+        - approvata
+        - punteggio
+        - colloquio
+      properties:
+        id:
+          type: integer
+        data:
+          type: string
+        approvata:
+          type: boolean
+        punteggio:
+          type: integer
+        colloquio:
+          type: boolean
 
 securityDefinitions:
   cookieAuth:
